--- a/template_sunil/sass-testing/scss/style.scss
+++ b/template_sunil/sass-testing/scss/style.scss
@@ -1,14 +1,24 @@
 @import '_settings.scss';
+@import '_mixin.scss';
 
 $blue-dark: darken($blue, 10% );
 $blue-light: ligh­ten­($blue, 10% );
 
 body {
 	background-color: $blue-dark;
-	h1 {
+	.header {
 		background-color: $blue-light;
 		font-size:20px;
 		color:$white;
 		text-align:center;
 	}
+}
+.box{
+	width: 100px;
+	height: 100px;
+	background-color:red;
+	
+	@include border-radius(5px);
+
+
 }
